--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,22 @@
 }
 
 body {
+    font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: var(--brand-color);
+}
+
+.container {
+    padding-inline: 32px;
+    margin-inline: auto;
 }
