--- a/styles/header.css
+++ b/styles/header.css
@@ -25,6 +25,10 @@ header .container {
     margin-bottom: 8px;
 }
 
+header ul {
+    width: 280px;
+}
+
 header ul li {
     display: flex;
     list-style: none;
